sites/all/themes/lacuna_stories/sass/components/annotator.scss
/* ... */
.annotator-editor .annotator-privacy-types {
  margin-left: 4px;
}

.annotator-editor {
  .annotator-category:hover,
  .annotator-privacy:hover {
    cursor: pointer;
  }
  .annotator-controls {
    a {
      text-decoration: none;
      text-align: center;
      padding: 12px 10px 0px 10px;
      color: black;
    }
    a.annotator-focus, a:hover {
      color: white;
    }
  }
}

.annotator-viewer {
  .annotator-privacy-type {
    // padding: 6px;
    font-size: 10px;
    padding: 4px 15px;
    margin-bottom: 6px;
    // margin-bottom:2px;
    // width:75px;
    display: inline-block;
    text-align: center;
    width: 33%;
    font-family: $helvetica; // $base-font-family;                // as with the author widget, this sets the font-family of the text to sans-serif (ih, 07/12)
    &::before {
      font: normal normal normal 8.5px/1 FontAwesome;          // and then overrides the font for the icon by referencing directly the element prior to the annotator privacy type font (ih, 07/12)
      padding-left: 0px;
    }
  }
  .annotator-privacy-types {
    margin-left: 0px;
  }
  .annotator-privacy {
    padding-left: 0;
    padding-top: 0;
  }
  .annotator-privacy-group.checked {
    padding: 6px;
    // margin: 1px 1px 0px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    display: inline-block;
  }
  .annotator-privacy-group.peer-groups.checked {
    background-color: $privacy-selected;
  }
  .annotator-privacy-group.course-groups.checked {
    background-color: $privacy-default;
  }
  .annotator-reply {
    // margin-top: 12px;
    span:first-of-type {                       // this edits the format of "# Replies"
        font-weight: 650px !important;
        margin-right: 10px !important;
    }
    span {
      cursor: pointer;
    }
    max-height: 200px;
    overflow: auto;
    span:hover {
      color: black;
    }
    ol.annotator-reply-list {
      // padding: 0 0 0 2px;
      padding: 9px 0px 4px;
    }
    li.annotator-reply-replyarea {
      list-style: none;
      
      /* background: rgba(175, 175, 175, .5);
      //color: white;
      padding-left: 2px;
      //padding-right: -15px;
      width: 90%; */

      font-size: 10px;
      color: #1a1a1a;
      .annotator-reply-text p {
        /* //color: white;
        padding: 3px; */

        margin: 4px 2px 0px;
        border-left: 1px solid black;
        padding-left: 6px;
        padding-bottom: 6px;
      }
    }

    .annotator-reply-author {
      text-transform: lowercase;
      font-variant: small-caps;
      font-size: 15px;
      font-weight: 500;
    }

    .annotator-reply-date {
      font-size: 9px;
      color: #a5a5a5;
    }

    div.annotator-reply-controls {
      /* //float: right;
      padding-bottom: 1px;
      */
      padding: 0px 0px 0px 10px !important;
      border-left: 1px solid black;
      margin: -2px 0px 4px 2px;
    }

    div:nth-child(2)::before{                               // accesses reply icon
      font: normal normal normal 9px/1 FontAwesome;
    }

    span.fa.fa-reply {
      font-family: $helvetica;
      font-size: 13px;

      &:before {
        font: normal normal normal 9px/1 FontAwesome;
      }
    }
  }
}

.annotator-reply-form {
  position: fixed;
  display: block;
  background: rgba(250,250,250, .9);
  width: 25%;
  left: 25%;
  top: 20%;
  overflow: auto;
  z-index: 100;
  padding: 10px;
  border: 1px solid black;
  display: none;
  .annotator-reply-text {
    width: 30%;
    height: 50px;
  }
  .annotator-reply-button {
    color: white;
    text-decoration: none;
  }
}

.annotator-privacy-types .annotator-privacy-type {
  background-color: $privacy-default;
}

.annotator-privacy-types .annotator-privacy-type.checked {
  background-color: $privacy-selected;
}

.annotator-privacy-type.annotator-privacy-peer-groups {
  width: 40%;                 // 45%;                 // ih(8/16)
}

.annotator-privacy-everyone {
  background-color: $privacy-default !important;
}

.annotator-privacy-private {
  background-color: rgba(255, 0, 51, .2) !important;
}

form.annotator-widget .annotator-privacy-groups {
  display: none;
}
form.annotator-widget .annotator-privacy-groups.show-groups {
  display: block;
  margin-left: 15px;
  color: black;
  padding: 0px;
}
label.annotator-privacy-group {
  width: 95%;
  margin-left: 5%;
  display: inline-block;
}

/* ----------------------------------------------------------------
*	Rich Text Annotator styles
*	from annotator/css/richText-annotator.css
*/

.annotator-viewer div:first-of-type.richText-annotation *,
.annotator-viewer div:first-of-type.richText-annotation{
  font-style: normal;
  font-weight: inherit;
  text-align: inherit;
}
.annotator-viewer div:first-of-type.richText-annotation{
  padding-top: 22px;
}

// ih (8/16): my add, which overrides whatever is causing padding top & bottom to be 12px (can't find where it is in here...)
.annotator-viewer div:first-of-type {
  font-size: 13px;
  padding-top: 10px;
  padding-bottom: 6px;
}

/* Fix in the tinymce */
.annotator-viewer div:first-of-type.richText-annotation strong{
  font-weight: bold;
}
.annotator-viewer div:first-of-type.richText-annotation em{
  font-style: italic;
}


/* Some change in the design of Annotator */
.annotator-editor .annotator-widget{
  min-width: 300px;
}

.annotator-widget .annotator-listing{
  padding: 1px;
}

.annotator-widget.annotator-listing{
  padding: 0px 10px 10px;                                   // this adds 10px of padding to the .annotator-widget.annotator-listing box in .annotator-outer.annotator-viewer for better readability (ih, 08/15)
}

/* Fix to show icons */
.annotator-editor a:after {
  content: none;
}

.annotator-tags-item {
  font-size: smaller;
}

/* ----------------------------------------------------------------
*	Rich Text styles
*	from annotator/css/richtext.css
*/

/* Fix to show icons */
.annotator-editor a:after {
  content: none;
}
/* ... */

